fix font size and name and orcid card alignment

--- a/src/app/mydata/components/shared-layouts/profile-summary-view/profile-summary-view.component.scss
+++ b/src/app/mydata/components/shared-layouts/profile-summary-view/profile-summary-view.component.scss
@@ -14,7 +14,7 @@ app-profile-card,
 }
 
 h2 {
-  font-size: 1.5rem !important;
+  font-size: 1.4rem !important;
 }
 
 h3 {
